compiler/testData/diagnostics/tests/classLiteral/unresolvedClass.kt
val u = <!UNRESOLVED_REFERENCE!>Unresolved<!>::class
val g = <!UNRESOLVED_REFERENCE!>UnresolvedGeneric<!><<!DEBUG_INFO_MISSING_UNRESOLVED!>UnresolvedTypeArg<!>>::class
